[package]
authors = ["Jonathan Pallant <jonathan.pallant@ferrous-systems.com>"]
edition = "2018"
readme = "README.md"
name = "armtesting"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-semihosting = "*"
panic-halt = "*"

# this lets you use `cargo fix`!
[[bin]]
name = "armtesting"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
